styles.css
/* CSS by Alicia Pacheco */
/* Color palette 
cream = #FAF4E3
sage green= #A5A68F
dusty rose= #D9B2A9
neutral pink= #F2DBD5
offwhite= #F4EEED
*/

/* GLOBAL (base) MOBILE FIRST */
body {
    background-color: #FAF4E3;
    color: #333;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.7;
    margin: 0;
}

@media (min-width: 817px) {
    nav ul {
        flex-direction: row;
        justify-content: center;
    }
}

/* Header */

header {
    background-color: #A5A68F;
    color: white;
    text-align: center;
    padding: 2rem 1rem;
}
header h1 {
    margin: 0;
}

/* Navigation */

nav {
    background-color: #D9B2A9;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

nav a {
    text-decoration: none;
    color: #333;
    font-weight: bold;
    transition: color 0.3s;
}

nav a:hover {
    color: white;
}

main {
    max-width: 1000px;
    margin: 0 auto;
    padding: 2rem 1rem;
}

section {
    background-color: #F4EEED;
    padding: 1.5rem;
    margin-bottom: 1.5rem;
    border-radius: 10px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
}

h2 {
    margin-top: 0;
    color:#6b6c5a;
}

/* Lists */

ul {
    padding-left: 1.5rem;
}

/* Links */

a {
    color: #8b5e57;
    font-weight: bold;
}

a:hover {
    color: #a5a68f
}

/* Project */

.project-card {
    border-left: 6px solid #A5A68F
}

.project-card a {
    display: inline-block;
    margin-top: .75rem;
    background-color: #D9B2A9;
    color:#333;
    text-decoration: none;
    padding: 0.6rem 1rem;
    border-radius: 5px;
}

.project-card a:hover {
    background-color: #a5a68f;
    color: white;
}

/* Images */

img {
    max-width: 100%;
    height: auto;
    border-radius: 8px;
}

section img {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

/* Footer */

footer {
    background-color: #d9b2a9;
    text-align: center;
    padding: 1rem;
}

footer p {
    margin: 0;
}

